# realtorsite

./: .gitignore  README.md  package-lock.json  package.json
backend/: Cargo.toml  Rocket.toml
backend/data/: houses.json  team.json
backend/src/: main.rs  mongo.rs
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/public/images/: leader.jfif
frontend/src/: App.js
frontend/src/components/: AboutUs.js  HouseCarousel.js  MainHomeWorth.js  MarketingServices.js  Navigationbar.js
frontend/src/data/: houses.js  team.js
frontend/src/screens/: AdminScreen.js  BlogScreen.js  ContactUsScreen.js  EditScreen.js  EditTeamScreen.js  HomeScreen.js  LoginScreen.js  PropertiesListScreen.js  PropertiesScreen.js  TeamScreen.js
