[package]
name = "backend"
version = "0.1.0"
authors = ["xeonmobius <refinedzeta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
rocket_contrib = "0.4.7"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.0"
mongodb = { version = "1.2.0", features = ["sync"], default-features = false }
futures = "0.3.13"
time = "0.2.25"
djangohashers = "1.4.0"
dotenv = "0.15.0"
